necessary modifications for telenor project.